# SharedBookmarks

./: .gitignore  Cargo.toml  README.md
deploy/: deploy.yaml
deploy/roles/nginx/files/: shared-bookmarks.conf
deploy/roles/nginx/handlers/: main.yaml
deploy/roles/nginx/tasks/: main.yaml
deploy/roles/web/files/: shared-bookmarks.service
deploy/roles/web/handlers/: main.yaml
deploy/roles/web/tasks/: main.yaml
firefox-extension/: manifest.json  shared-bookmarks.js
migrations/: 20230710065617_initial.sql  20230713204329_add_favicon_url.sql
public/css/: main.css
src/: api.rs  lib.rs  main.rs  view.rs
templates/: index.hbs
