[package]
name = "shared-bookmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "shared-bookmark"


[dependencies]
actix-web = "4.3.1"

sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "any", "sqlite"]}

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["macros", "rt-multi-thread"]}

dotenvy = "0.15.7"
handlebars = { version = "4.3.7", features = ["dir_source"]}
chrono = "0.4.26"
